# NeuroHealth

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUIDE.md  KAGGLE_GUIDE.md  LICENSE  README.md  SECURITY.md  kaggle_requirements.txt  pyproject.toml  readme_site_image.html  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  main.py  routes.py
data/samples/: sample_chunks.json  sample_raw_topics.json
evaluation/: __init__.py  ablation_results.json  ablation_study.py  baseline_comparison.py  benchmark_results.json  benchmarks.py  equity_results.json  equity_tests.py  human_evaluation.py  inference_profiler.py  profiling_results.json  safety_results.json  safety_tests.py  visualize_results.py
evaluation/baseline_output/: baseline_comparison_20260306_150706.json  baseline_comparison_20260306_214131.json
evaluation/human_eval_output/: eval_forms_20260307_023221.json
evaluation/test_cases/: expected_outputs.json  sample_queries.json
src/: __init__.py  llm_utils.py  pipeline.py
src/data_pipeline/: __init__.py  chunker.py  cleaner.py  collector.py  entity_schema.py  validator.py
src/knowledge_base/: __init__.py  embedder.py  vector_store.py
src/modules/: __init__.py  (+7 more)
tests/: __init__.py  conftest.py  helpers.py  test_all_fixes.py  test_api.py  test_baseline_comparison.py  test_data_pipeline.py  test_entity_schema.py  test_modules.py  test_pipeline.py  test_rag.py
ui/: app.py
(+3 files in other folders)
